--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<title>空调</title>
-<iframe height="700" src="https://ac.yunyoujun.cn"></iframe>
-<p>你可以随时吹这个空调，这个空调很过瘾。有这独立遥控器，你可以单独点击它并开启。
-<p>空调网站项目:https://github.com/YunYouJun/air-conditioner
-<p>这是开源的
-post.content + %Q[<p class='post-footer'>&nbsp;#{pre or "原文地址："}<a href='#{post.full_url}'>#{post.full_url}</a><br/>&nbsp;版权声明：自由转载-非商用-非衍生-保持署名| <a href='http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh'>Creative Commons BY-NC-ND 3.0</a></p>]
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,4 +27,4 @@ post.content + %Q[<p class='post-footer'>&nbsp;#{pre or "原文地址："}<a hre
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
-</html>
+</html
